Require argon for 6x ore production